# queryable-slack

./: .cursorrules  .env.example  .gitignore  .vercelignore  ADMIN_TIMING_SETUP.md  CHATBOT_GUIDE.md  CLAUDE.md  CONFIDENCE_ASSESSMENT.md  CONTEXT7_CLI_GUIDE.md  CONTEXT7_CLI_QUICK_START.md  CONTEXT7_QUICK_START.md  CONTEXT7_SETUP.md  DEBUG_ENDPOINT_SUMMARY.md  DEPLOYED.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FIX.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.txt  DEPLOY_VECS.md  EXAMPLE_TRIAL_RUN.md  FINDINGS_SUMMARY.txt  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_CORS.md  FIX_INTEGRATION.md  FIX_INTEGRATION_ERROR.md  FULLSCREEN_CHATBOT.md  GET_CREDENTIALS.md  GET_DB_PASSWORD.md  INSTALLATION.md  INSTALL_NODE.md  LOCAL_NETWORK_SETUP.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_EXECUTION_PLAN.md  MIGRATION_STATUS.md  MONITORING.md  MONITOR_COMMAND.txt  (+53 more)
api/: .vercelignore  debug.py  index.py  migrate.py  migrate_batches.py  migrate_bulk.py  migrate_data.py  migrate_standalone.py  query.py  requirements.txt  test.py  vercel.json
conductor/: __init__.py  ask.py  ask_beautiful.py  audio_processor.py  cache.py  chat.py  chat_fullscreen.py  check_vecs_data.py  checkpoint.py  chunker.py  chunking.py  config.py  deep_research_query.py  entity_extractor.py  entity_search.py  execute_batches_optimized.py  execute_batches_via_mcp.py  execute_sql_batches.py  file_parser.py  hybrid_search.py  image_processor.py  ingest.py  migrate_chromadb_to_vecs.py  migrate_direct_mcp.py  migrate_small_batches.py  migrate_using_vecs_client.py  models.py  (+19 more)
(+70 files in other folders)
